# sugar-wechat-bot

./: README.md
bot_runner_go/: config.example.yml  go.mod  main.go
bot_runner_go/pkg/autoconfig/: config.go
bot_runner_go/pkg/natsproducer/: config.go
bot_runner_go/pkg/reactagent/: agent.go  config.go  logger.go
bot_runner_go/runner/helloworld/: server.go
bot_runner_go/runner/wxauto/: server.go
bot_worker/: config.example.yml  config.yml  go.mod  go.sum  main.go
bot_worker/internal/: server.go
bot_worker/pkg/autoconfig/: config.go
bot_worker/pkg/natsconsumer/: config.go  consumer.go  consumer_test.go
bot_worker/pkg/natsproducer/: config.go
bot_worker/pkg/reactagent/: agent.go
bot_worker/pkg/runner/: runner.go
bot_worker/pkg/zerologger/: config.go
bot_worker/runner/helloworld/: server.go
bot_worker/runner/wxauto/: server.go  wxauto.go
wechat_agent/: .gitignore  README.md  config.yaml  pyproject.toml
wechat_agent/src/: config.py  logger.py  lru.py  main.py
