[project]
name = "sugar-wechat-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nats-py>=2.10.0",
    "pydantic>=2.11.7",
    "python-json-logger>=3.3.0",
    "pyyaml>=6.0.2",
    "wxauto>=39.1.7",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
package = true

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/*"]

[project.scripts]
wechat-agent = "main:main"
